# Probabilistic-Programming-and-Bayesian-Methods-for-Hackers

./: main.py  pyproject.toml
Chapter1_Introduction/: Ch1_Introduction_PyMC_current.ipynb
Chapter2_MorePyMC/: Ch2_MorePyMC_PyMC_current.ipynb
Chapter3_MCMC/: Ch3_IntroMCMC_PyMC_current.ipynb
Chapter4_TheGreatestTheoremNeverTold/: Ch4_LawOfLargeNumbers_PyMC_current.ipynb
Chapter5_LossFunctions/: Ch5_LossFunctions_PyMC_current.ipynb
Chapter6_Priorities/: Ch6_Priors_PyMC_current.ipynb
jeff_study/: README.md  ch1.ipynb  ch2.ipynb  ch3.ipynb  model_class.ipynb  model_samples.ipynb  scratch.ipynb
