[project]
name = "probabilistic-programming-and-bayesian-methods-for-hackers"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "ipython>=2.0",
    "jinja2>=3.1.6",
    "jupyter>=1.1.1",
    "matplotlib>=1.2.1",
    "numpy>=1.7.1",
    "praw>=2.0.0",
    "pymc>=5.0.1",
    "pyzmq>=13.1.0",
    "scipy>=0.12.0",
    "tornado>=3.0.2",
    "wsgiref>=0.1.2 ; python_full_version < '3'",
]
